...
        enabledBorder: const UnderlineInputBorder(
            borderRadius: BorderRadius.all(Radius.circular(10.0)),
            borderSide: BorderSide(color: Colors.transparent, width: 0.0)),
        focusedBorder: const UnderlineInputBorder(
            borderRadius: BorderRadius.all(Radius.circular(10.0)),
            borderSide: BorderSide(color: Colors.transparent, width: 0.0)),
        hintText: 'What pokemon are you looking for?',
      ),
      chipBuilder: (context, state, Object selection) =>
          SearchChip(selection: selection, state: state),
      suggestionBuilder: (context, state, Object suggestion) {
        return ListTile(
          title: suggestion is Types
...
