...
    });
  }

  final List<PokemonListItem> pokemonList = const [
    PokemonListItem(
      number: 1,
      name: 'Bulbasaur',
      types: [Types.grass, Types.poison],
      imageUrl:
          'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png',
    ),
    PokemonListItem(
      number: 2,
...
